# holopy

./: .bzrignore  .gitattributes  .gitignore  .travis.yml  AUTHORS  INSTALL.txt  README.rst  README.txt  TODO.txt  environment.yml  fit.py  groupshare_automount_config.sh  interface.org  meson.build  post_install.py  precompiled.cubin  pyproject.toml  requirements.txt  run_nose.py  run_tests.py  setup.cfg  setup.py  setup.py~  stdeb.cfg
core/: __init__.py  data.py  helpers.py  holopy_object.py  math.py  metadata.py
core/io/: __init__.py  image.py  io.py
core/process/: __init__.py  centerfinder.py  enhance.py  filter.py
core/tests/: common.py  test_io.py
core/tests/exampledata/: TmatDimer_input_deck_fast.yaml  image0001.npy  image0002.npy  image0003.npy  optical_train3.yaml
docs/: Makefile  make.bat  results_file.h5
docs/source/: changes.rst  conf.py  credits.rst  dev_guide.rst  downloads.rst  how to apidoc  index.rst  reference.rst  releasenotes.rst
docs/source/_static/: README.txt
docs/source/_templates/: README.txt  layout.html
docs/source/pyplots/: basic_ps_recon.py  basic_recon.py  calc_coated_sphere.py  calc_scat_matr.py  calc_sphere.py  calc_two_spheres.py  dimer_hologram.py  show_bg_holo.py  show_example_holo.py
docs/source/reference/: holopy.core.io.rst  holopy.core.marray.rst  holopy.core.math.rst  holopy.core.metadata.rst  holopy.core.process.rst  holopy.core.rst  holopy.core.tools.rst  holopy.fitting.rst  holopy.inference.rst  holopy.propagation.rst  holopy.rst  holopy.scattering.rst  holopy.scattering.scatterer.rst  holopy.scattering.theory.mie_f.rst  holopy.scattering.theory.rst  holopy.scattering.theory.tmatrix_f.rst  holopy.vis.rst  modules.rst
docs/source/sphinxext/: comment_eater.py  compiler_unparse.py  docscrape.py  docscrape_sphinx.py  numpydoc.py  traitsdoc.py
docs/source/tutorial/: calc_tutorial.rst  dda_tutorial.rst  dev_tutorial.rst  fit_tutorial.rst  index.rst  install.rst  load_tutorial.rst  ps_recon_tutorial.rst  recon_tutorial.rst
docs/source/users/: basics.rst  build_env.rst  calc_tutorial.rst  concepts.rst  dda_tutorial.rst  ddaintro.rst  details.rst  dev_tutorial.rst  (+15 more)
holopy/: __init__.py  _version.py  fitting.py  hologram.py  meson.build  optics.py
holopy/analyze/: __init__.py  fit.py  fit_new.py  geometry.py  propagate.py  reconstruct.py
holopy/core/: __init__.py  data.py  errors.py  helpers.py  holopy_object.py  mapping.py  marray.py  math.py  meson.build  metadata.py  parameter_mapping.py  prior.py  utils.py
holopy/fitting/: __init__.py  errors.py  fit.py  fit_series.py  mcmc.py  minimizer.py  model.py  noise_model.py  parameter.py  prior.py  random_subset.py  series.py  timeseries.py
holopy/inference/: __init__.py  cma.py  cmaes.py  emcee.py  functional_api.py  interface.py  mcmc.py  meson.build  model.py  nmpfit.py  noise_model.py  parameter_mapping.py  prior.py  result.py  sample.py  scipyfit.py  timeseries.py
holopy/io/: __init__.py  break_tiff_stack.py  fit_io.py  image_io.py  io.py  yaml_io.py
holopy/minimizer/: __init__.py  nmpfit.py
holopy/model/: __init__.py  calculate.py  errors.py  mie.py  mie_cython.py  mie_fortran.py  tmatrix_dimer.py  tmatrix_trimer.py
holopy/process/: __init__.py  centerfinder.py  enhance.py  filter.py  math.py
holopy/propagation/: __init__.py  convolution_propagation.py  meson.build  point_source_propagate.py  propagate.py
holopy/scattering/: __init__.py  binding_method.py  calculations.py  errors.py  geometry.py  imageformation.py  interface.py  meson.build
holopy/scattering/scatterer/: __init__.py  abstract_scatterer.py  axisymmetric.py  bisphere.py  capsule.py  coatedsphere.py  composite.py  csg.py  cylinder.py  ellipsoid.py  ellipsoid.py~  janus.py  meson.build  scatterer.py  sphere.py  sphere_builtin.py  spherecluster.py  spheroid.py  spheroid.py~  voxelated.py
holopy/scattering/theory/mie_f/: MSTSM_f-90_permission.txt  __init__.py  meson.build  mie_specfuncs.py  mieangfuncs.f90  miescatlib.py  multilayer_sphere_lib.py  scfodim.for  scsmfo_min.for  setup.py  uts_scsmfo.for
holopy/scattering/theory/tmatrix_f/: Makefile  S.f  S.f90  S.lp.f  ampld.lp.f  ampld.par.f  amplq.lp.f  amplq.par.f  lpd.f  lpq.f  makefile  meson.build  permissions.txt  setup.py
holopy/tests/: README.txt  common.py  disabled_dimernmpfit.py  test_Scatterer.py  test_dimernmpfit.py  test_dimernmpfit_dimensionless.py  test_fit.py  test_fit_deck.py  test_fit_new.py  test_io.py  test_math.py  test_mie.py  test_multisphere.py  test_new_fit.py  test_new_mie.py  test_nmpfit.py  test_openopt.py  test_reconstruct.py  test_scatterer.py  test_theory.py  test_tmatrix.py  test_utility.py
holopy/utility/: __init__.py  errors.py  helpers.py
holopy/vis/: __init__.py  gui_manipulate.py  show.py  vis2d.py  vis3d.py
holopy_old/: __init__.py
holopy_old/analyze/: reconstruct.py
holopy_old/tests/: disabled_dimernmpfit_dimensionless.py  test_math.py
holopy_old/vis/: vis3d.py
management/: get_test_golds.py  make_linux_build.sh  make_source_package.sh  package_test_golds.sh
scattering/: __init__.py
scattering/scatterer/: __init__.py  abstract_scatterer.py  coatedsphere.py  composite.py  ellipsoid.py  sphere.py  spherecluster.py  voxelated.py
scattering/tests/: common.py  test_basics.py  test_dda.py  test_layeredmie.py  test_mie.py  test_multisphere.py  test_scatterer.py
scattering/theory/: __init__.py  dda.py  mie.py  scatteringtheory.py
scatterpy/: __init__.py  errors.py
scatterpy/io/: __init__.py  serializable.py  yaml_io.py
scatterpy/scatterer/: __init__.py  abstract_scatterer.py  coatedsphere.py  composite.py  ellipsoid.py  general.py  movingsphere.py  rigidclusters.py  sphere.py  spherecluster.py  spheredimer.py  voxelated.py
scatterpy/tests/: common.py  test_dda.py  test_io.py  test_layeredmie.py  test_mie.py  test_multisphere.py  test_new_mie.py  test_scatterer.py  test_spherecluster.py  test_theory.py
scatterpy/theory/: __init__.py  dda.py  layered_mie.py  mie.py  mie_cython.py  mie_smear.py  multisphere.py  multisphereapprox.py  scatteringtheory.py  tmatrix_trimer.py
(+253 files in other folders)
