[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'cython', 'numpy<1.20', 'scipy', 'pyYaml', 'pillow',
            'h5py', 'matplotlib', 'xarray', 'h5netcdf', 'nose']

[project]
name = 'HoloPy'
version = '3.6.0'
description = 'Holography in Python'
authors = [{name = 'Manoharan Lab, Harvard University', email='vnm@seas.harvard.edu'},]
homepage = 'https://manoharan.seas.harvard.edu/holopy'
repository = 'https://github.com/manoharan-lab/holopy'
license = {file = 'LICENSE'}
test_suite = 'nose.collector'
#entry_points = {'nose.plugins.0.10': HOLOPY_NOSE_PLUGIN_LOCATION}
package = ['HoloPy']

# numpy>=1.12
# scipy
# pyYaml
# pillow
# h5py
# matplotlib
# xarray>=0.10.0
# h5netcdf
# nose
