scattering_scatterer_sources = [
 'spheroid.py',
 'csg.py',
 'capsule.py',
 'sphere.py',
 'scatterer.py',
 'ellipsoid.py',
 'bisphere.py',
 'composite.py',
 'spherecluster.py',
 'janus.py',
 '__init__.py',
 'cylinder.py'
]

py.install_sources(scattering_scatterer_sources, subdir: 'holopy/scattering/scatterer')
